# pythia

./: .env.example  .gitignore  .vercelignore  CHANGELOG.md  README.md  SOP.md  SOUL_CORP.md  TASK.md  TASK_BACKEND.md  TASK_BACKEND_2.md  TASK_FRONTEND.md  config.toml  main.py  pyproject.toml  requirements.txt  start.sh  start_dashboard.sh
capital/: __init__.py  allocator.py  manager.py
chain/: Cargo.toml
chain/abi/: ctf.json  ctf_exchange.json
chain/src/: contracts.rs  lib.rs  main.rs  merge.rs  types.rs  wallet.rs
dashboard/: README.md  TASK_GAME.md  game.html  index.html  landing.html  scanner.html  strategies.html  trades.html  tui.html  wallet.html  warroom.html
dashboard/css/: main.css  theme.css
dashboard/js/: api.js  app.js  charts.js  positions.js  scanner.js
db/: __init__.py  models.py  store.py
drafts/: email_sequence.md  reddit_posts.md  tweet_001_launch.md  tweet_002_calculator.md  tweet_queue_week1_week2.md  twitter_profile.md
executor/: __init__.py  merge_trigger.py  order_placer.py  position_tracker.py
products/: merge_arb_playbook.md
public/: bot.html  calculator.html  index.html  mean-reversion.html  pnl.html  robots.txt  scanner.html  signals.html  sitemap.xml  thanks.html
public/blog/: how-to-start-polymarket-arbitrage.html  index.html  kelly-criterion-prediction-markets.html  polymarket-fee-structure-explained.html  what-is-polymarket-merge-arb.html
scanner/: __init__.py  clob_client.py  dependency_detector.py  fee_calculator.py  gamma_client.py  microstructure.py  opportunity_detector.py
strategy/: __init__.py  capital_recycler.py  maker_arb.py  mean_reversion.py  merge_arb.py  price_magnet.py
tests/: test_capital_manager.py  test_fee_calculator.py  test_mean_reversion.py  test_merge_arb.py  test_microstructure.py  test_opportunity_detector.py
utils/: __init__.py  alerts.py  logger.py
