[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "agnostic-mechanical-arb-bot"
version = "0.1.0"
description = "Polymarket merge arbitrage bot"
requires-python = ">=3.11"
dependencies = [
    "httpx[http2]>=0.27.0",
    "eth-account>=0.12.0",
    "web3>=6.20.0",
    "tomli>=2.0.0",
    "python-dotenv>=1.0.0",
    "aiosqlite>=0.20.0",
    "rich>=13.7.0",
    "typer[all]>=0.12.0",
    "pydantic>=2.7.0",
    "tenacity>=8.3.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "respx>=0.21.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
]

[project.scripts]
arb-bot = "main:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
